--- a/jt-manager/src/main/webapp/WEB-INF/sys/login.html
+++ b/jt-manager/src/main/webapp/WEB-INF/sys/login.html
@@ -33,9 +33,9 @@
 <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
 
-<script language="JavaScript">
+<script type="text/javascript">
     $(function () {
-        $('#content').on("click", "btn-login", login)
+        $('#content').on("click", ".btn-login", login)
     });
 
     function login() {
@@ -43,8 +43,18 @@
         var password = $("#password").val();
         var url = "/login";
         var params = {"username": username, "password": password};
-        $.post(url, params, function (res) {
-            console.log(res);
+        // $.post(url, params, function (res) {
+        //     console.log(res);
+        // })
+        $.ajax({
+            url: url,
+            type: 'post',
+            data: JSON.stringify(params),
+            contentType: "application/json; charset=utf-8",
+            dataType: "JSON",
+            success (data){
+                console.log(data)
+            }
         })
     }
 </script>
