--- a/jt-manager/src/main/webapp/WEB-INF/sys/_menu.html
+++ b/jt-manager/src/main/webapp/WEB-INF/sys/_menu.html
@@ -43,6 +43,10 @@
                         title: '上级菜单'
                     },
                     {
+                        field: 'permission',
+                        title: '授权标识'
+                    },
+                    {
                         field: 'type',
                         title: '类型',
                         align: 'center',
